@@ -1,5 +1,9 @@
 2007-10-06  Al Riddoch  <alriddoch@zepler.org>
 
+        * test/Avatar_unittest.cpp: Cover destructor and deactivate().
+
+2007-10-06  Al Riddoch  <alriddoch@zepler.org>
+
 	* Eris/Log.h, Eris/Avatar.h, Eris/Avatar.cpp: Clean up white spacing.
 
 	* Eris/Avatar.h: Make all private members protected for testing.
